cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp
        62.h
        64.h
        63.h
        447.h
        82.h
        83.h
        2182.h
        120.h
        931.h
        2744.h
        221.h
        2171.h
        875.h
        2788.h
        2765.h
        410.h
        2859.h
        2865.h
        5.h
        5.h
        139.h
        2846.h
        2846.h
        Base.cpp
        Base.h
        2670.h
        993.h
)
